--- a/README.org
+++ b/README.org
@@ -21,7 +21,7 @@ past a given time limit. The main purpose is to execute an OS suspend
 command.  
 
 User activity is picked up from X11 and include mouse movement and keyboard
-activity. It does not depend on XScreenSaver.
+activity. In contrast to other techniques, it does not depend on XScreenSaver.
 
 Bigger desktop session packages provide this functionality,
 but for minimal setups with only X11 and dwm, I haven't found anything
