--- a/README.org
+++ b/README.org
@@ -47,7 +47,9 @@ I use this with the s2disk suspend command. I recommend adding the
 following to a new file in /etc/sudoers.d/ (and chmod 440), to make it
 executable without sudo password input:
 
+#+BEGIN_EXAMPLE
   yourusername ALL=(ALL) NOPASSWD: /usr/sbin/s2disk
+#+END_EXAMPLE
 
 
 * Todo
